差不多稳定版

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,5 @@
     <string name="str_bookshelve">BookShelve</string>
     <string name="str_user">User</string>
     <string name="str_bookshop">BookShop</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="str_bookinfo">BookInfo</string>
 </resources>
