--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,5 +4,5 @@
     <string name="str_bookshelve">书架</string>
     <string name="str_bookshop">书城</string>
     <string name="str_user">用户</string>
-    <string name="hello_blank_fragment">书籍信息</string>
+    <string name="str_bookinfo">书籍信息</string>
 </resources>
