优化章节初始化功能

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,4 +5,5 @@
     <string name="str_bookshop">书城</string>
     <string name="str_user">用户</string>
     <string name="str_bookinfo">书籍信息</string>
+    <string name="str_fontList">字体列表</string>
 </resources>
