--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="str_user">User</string>
     <string name="str_bookshop">BookShop</string>
     <string name="str_bookinfo">BookInfo</string>
+    <string name="str_fontList">FontList</string>
 </resources>
